<resources>
    <string name="app_name">AirQuality Sensors</string>
    <string name="co2_field">CO2</string>
    <string name="humidity_field">Humidity</string>
    <string name="temperature_field">Temperature</string>
    <string name="light">Lighting</string>
    <string name="show_all">Show all</string>
    <string name="connectionButton">Connect</string>
    <string name="device1">HC-05</string>
    <string name="device2">HC-06</string>
</resources>
