<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_co2"
        android:title="@string/co2_field"
        app:showAsAction="never"
        android:onClick="menuClick"/>
    <item
        android:id="@+id/menu_humidity"
        android:title="@string/humidity_field"
        app:showAsAction="never"
        android:onClick="menuClick"/>
    <item
        android:id="@+id/menu_temp"
        android:title="@string/temperature_field"
        app:showAsAction="never"
        android:onClick="menuClick"/>
    <item
        android:id="@+id/menu_light"
        android:title="@string/light"
        app:showAsAction="never"
        android:onClick="menuClick"/>
    <item
        android:id="@+id/menu_all"
        android:title="@string/show_all"
        app:showAsAction="never"
        android:onClick="menuClick"/>
</menu>